--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pinia": "^2.1.7",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "sweetalert2": "^11.11.1",
     "v-calendar": "^3.1.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
